--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "passport-local-authenticate": "^1.2.0",
     "passport-local-mongoose": "^6.0.1",
     "path": "^0.12.7"
   }
