--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO=mongodb+srv://INTERMOCK:INTERMOCK@cluster0.o8owo.mongodb.net/USERS?retryWrites=true&w=majority
+MONGO=mongodb+srv://irretus:irretus@irretusagrobackend.nfbaw.mongodb.net/users?retryWrites=true&w=majority
 SECRET=owner_is_Abhishek_Agrawal_and_Ravi
