--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.4.17",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
+    "paytm-pg-node-sdk": "^1.0.4",
     "passport-local": "^1.0.0",
     "passport-local-authenticate": "^1.2.0",
     "passport-local-mongoose": "^6.0.1",
