--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "jquery": "^3.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.8",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
-    "paytm-pg-node-sdk": "^1.0.4",
     "passport-local": "^1.0.0",
     "passport-local-authenticate": "^1.2.0",
     "passport-local-mongoose": "^6.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "paytm-pg-node-sdk": "^1.0.4"
   },
   "devDependencies": {},
   "repository": {
