--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "async": "^3.2.0",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.23.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
@@ -22,6 +23,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.11.8",
     "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.4.17",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
